--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <div class="mt-5">
-  <h1>Success!!!</h1>
+  <h1 class="redText">Success!!!</h1>
 </div>
 
 <app-footer></app-footer>
