--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,18 +1,18 @@
 <ul class="navbar-nav me-auto mb-2 mb-md-0">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">Home</a>
+    <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Concepts</a>
+    <a class="nav-link" routerLink="/concepts">Concepts</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">User Management App</a>
+    <a class="nav-link" routerLink="/users">User Management App</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Products</a>
+    <a class="nav-link" routerLink="#">Products</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">About</a>
+    <a class="nav-link" routerLink="/about">About</a>
   </li>
   <ng-content></ng-content>
 </ul>
