--- a/src/app/concepts/components/concepts.component.html
+++ b/src/app/concepts/components/concepts.component.html
@@ -1,4 +1,8 @@
 <div class="container-fluid mt-3">
+  
+  <!-- display the data received from child comp here -->
+  <p>dataReceivedFromChildComp: 
+    {{dataReceivedFromChildComp.name}}</p>
 
   <nav>
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -58,11 +62,45 @@
 
     <div class="tab-pane fade" id="ceb-databinding" role="tabpanel" aria-labelledby="ceb-databinding-tab">
       <h2>Child to Parent Comp Communication using Custom Event Binding</h2>
-      <p>Will discuss on Monday</p>
+      <!-- Step 5: Handle the emitted custom event -- using $event - you can receive the data-->
+      <app-ceb 
+      (profileLoaded)="handleProfileLoaded($event)"></app-ceb>
     </div>
 
     <div class="tab-pane fade" id="directives-tab" role="tabpanel" aria-labelledby="directives-tab">
       <h2>Directives</h2>
+      <pre>
+        Directives
+        --
+          * Special instructions to the DOM 
+          
+          1. Attribute Directives 
+              routerLink, routerLinkActive, routerLinkActiveOptions, ...
+
+          2. Structural Directives
+              *ngIf, *ngFor, ngSwitch (TODO:)
+      </pre>
+
+      <h4>*ngIf Demo </h4>
+      <div class="alert alert-success" *ngIf="isLoggedIn; else NotAuthBox">
+        You are logged in. You can access premium features!
+      </div>
+      <ng-template #NotAuthBox>
+        <div class="alert alert-danger">
+          Not Logged in yet. Pls login to access premium features!
+        </div>
+      </ng-template>
+
+      <h4>*ngFor Demo</h4>
+      <ul>
+        <li *ngFor="let skill of skills">{{skill}}</li>
+        <!-- TODO: learn about finding index in *ngFor -->
+      </ul>
+
+
+
+
+
 
     </div>
 
