--- a/src/app/concepts/components/concepts.component.html
+++ b/src/app/concepts/components/concepts.component.html
@@ -79,6 +79,11 @@
 
           2. Structural Directives
               *ngIf, *ngFor, ngSwitch (TODO:)
+
+          3. Custom Attribute Directives 
+              ng g d concepts/directives/colorizer 
+
+          4. Custom Structural Directives // TODO:
       </pre>
 
       <h4>*ngIf Demo </h4>
@@ -97,7 +102,10 @@
         <!-- TODO: learn about finding index in *ngFor -->
       </ul>
 
-
+      <h3>Custom Attribute Directive - Colorizer Demo </h3>
+      <div appColorizer>
+        <h5>Random text</h5>
+      </div>
 
 
 
