--- a/src/app/users/components/user-details/user-details.component.html
+++ b/src/app/users/components/user-details/user-details.component.html
@@ -3,11 +3,11 @@
   <div class="row">
     <div class="card col-md-12">
       <div class="card-body">
-        <h5 class="card-title">John</h5>
+        <h5 class="card-title">{{userData?.name}}</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
           card's content.</p>
-        <p>Phone: 53225234</p>
-        <p>Email: a@g.com</p>
+        <p>Phone: {{userData?.phone}}</p>
+        <p>Email: {{userData?.email}}</p>
         <button type="button" class="btn btn-primary" 
         data-bs-toggle="modal" data-bs-target="#editUserModal">Edit</button>
         <button type="button" class="btn btn-danger">Delete</button>
