--- a/src/app/users/components/add-user/add-user.component.html
+++ b/src/app/users/components/add-user/add-user.component.html
@@ -48,7 +48,7 @@
         </div>
       </div>
 
-      <div class="alert alert-success">
+      <div class="alert alert-success" *ngIf="isSaved">
         Saved Successfully
       </div>
 
