--- a/src/app/users/components/user-details/user-details.component.html
+++ b/src/app/users/components/user-details/user-details.component.html
@@ -9,7 +9,8 @@
         <p>Phone: {{userData?.phone}}</p>
         <p>Email: {{userData?.email}}</p>
         <button type="button" class="btn btn-primary" 
-        data-bs-toggle="modal" data-bs-target="#editUserModal">Edit</button>
+        data-bs-toggle="modal" data-bs-target="#editUserModal" 
+          (click)="handleEditModalOpen()">Edit</button>
         <button type="button" class="btn btn-danger">Delete</button>
 
         <!-- Modal -->
@@ -21,37 +22,38 @@
                 <h5 class="modal-title" id="exampleModalLabel">Update User</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
-              <div class="modal-body">
-                <form>
+              <div class="modal-body" *ngIf="dupUserData">
+                <form ngNativeValidate (ngSubmit)="handleUpdateUser()">
                   <div class="form-group row mb-3">
                     <label for="staticEmail" class="col-sm-2 col-form-label">Name</label>
                     <div class="col-sm-10">
                       <input type="text" class="form-control" placeholder="Enter name" 
-                      required>
+                      required [(ngModel)]="dupUserData.name" name="userName">
                     </div>
                   </div>
                   <div class="form-group row mb-3">
                     <label for="staticEmail" class="col-sm-2 col-form-label">Phone</label>
                     <div class="col-sm-10">
                       <input type="text" class="form-control" placeholder="Enter Phone"
-                      required >
+                      required [(ngModel)]="dupUserData.phone" name="phone">
                     </div>
                   </div>
                   <div class="form-group row mb-3">
                     <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
                     <div class="col-sm-10">
                       <input type="email" class="form-control" 
-                        placeholder="Enter Email" required >
+                        placeholder="Enter Email" required 
+                        [(ngModel)]="dupUserData.email" name="email">
                     </div>
                   </div>
 
-                  <div class="alert alert-success">
+                  <div class="alert alert-success" *ngIf="isUpdated">
                     Updated successfully!
                   </div>
 
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
+                  <button type="submit" class="btn btn-primary">Save changes</button>
                   </div>
                 </form>
               </div>
