--- a/src/app/concepts/components/concepts.component.html
+++ b/src/app/concepts/components/concepts.component.html
@@ -114,6 +114,26 @@
 
     <div class="tab-pane fade" id="pipes-tab" role="tabpanel" aria-labelledby="pipes-tab">
       <h2>Pipes</h2>
+
+      <p>{{randomTxt}}</p>
+
+      <p>{{randomTxt | uppercase }}</p>
+      <p>{{randomTxt | lowercase }}</p>
+      
+      <hr>
+      <p>{{today}}</p>
+      <p>{{today | date }}</p>
+      <p>{{today | date: 'dd - MMMM - yyyy' }}</p>
+      <p>{{today | date: 'dd/MMM/yyyy hh:mm:ss a' }}</p>
+
+      <hr>
+      <h3>Custom Pipes</h3>
+      <p>ng g p shared/pipes/ellipsis</p>
+      <p>{{randomTxt}}</p>
+      <p>{{randomTxt | ellipsis }}</p>
+      <p>{{randomTxt | ellipsis: 20 }}</p>
+      <p>{{randomTxt | ellipsis: 50 }}</p>
+      <p>{{randomTxt | ellipsis: 70 }}</p>
     </div>
 
   </div>
