--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -11,7 +11,7 @@
             <a class="nav-link" href="#">Signup</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
+            <a class="nav-link" routerLink="/login">Login</a>
           </li>
         </app-menu>
       </div>
